--- a/Blog.html
+++ b/Blog.html
@@ -23,7 +23,7 @@
                         <li><a href="#">More</a></li>
                     </ul>
                 </li>
-
+                <li><a href="sugerencias.html">Sugerencias</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Blog.html">Blog</a></li>
 
