--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
                        
                     </ul>
                 </li>
-
+                <li><a href="sugerencias.html">Sugerencias</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Blog</a></li>
 
