--- a/sugerencias.html
+++ b/sugerencias.html
@@ -135,7 +135,7 @@
             
             <ul class="menu">
                 <img src="Images/logo.png" alt="logo-img" class="Logo">
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>
                     <a href="services.html">Services</a>
                     <ul class="services-menu">
