--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
             <ul class="menu">
                 <li><a href="Home.html">Home</a></li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="index.html">Services</a>
                     <ul class="services-menu">
                         <li ><a href="services.html">Green-Activities</a></li>
                         <li><a href="services.html">Eco-Trends</a></li>
