--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <nav class="navbar">
             <ul class="menu">
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>
                     <a href="services.html">Services</a>
                     <ul class="services-menu">
