--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
         <nav class="navbar">
             <ul class="menu">
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>
                     <a href="services.html">Services</a>
                     <ul class="services-menu">
