--- a/sugerencias.html
+++ b/sugerencias.html
@@ -146,7 +146,7 @@
                        
                     </ul>
                 </li>
-
+                <li><a href="#">sugerencias</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Blog</a></li>
 
